# DD-UI

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  DEPLOYMENT_NOTES.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  index.html  inventory.example  inventory.sample.yml  package.json  stack.env  tailwind.config.cjs
api/: auth.go  go.mod  go.sum  main.go  web.go
api/common/: encryption.go  globals.go  logging.go  types.go
api/database/: db.go  db_containers.go  db_deployment_stamps.go  db_hosts.go  db_scanlog.go  db_stacks.go  git_sync.go  stats.go
api/handlers/: cleanup.go  cleanup_handlers.go  devops.go  docker.go  git_routes.go  git_sync.go  gitops.go  groups.go  handlers.go  iac.go  logs.go  logs_routes.go  ssh.go  system.go
api/middleware/: auth.go
api/services/: auto_devops_policy.go  compose_render_hash.go  db_iac.go  deploy.go  deploy_sops.go  docker_client_helper.go  docker_images.go  git_sync.go  inventory.go  inventory_manager.go  inventory_watcher.go  readme_generator.go  scan_docker.go  scan_iac.go  settings.go
api/utils/: compose.go  docker_action.go  docker_inspect.go  hash.go  hash_drift.go  response.go  sse.go  ssh_operations.go  ssh_transport.go  types.go
src/: App.tsx   SignedOut.tsx  config.rs  entitlements.rs  index.css  main.rs  main.tsx  session.ts  styles.css
src/api/: auth.go  auto_devops.go  auto_devops_policy.go  db.go  (+34 more)
ui/: index.html  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
(+108 files in other folders)
