[package]
name = "ddui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["macros", "formatting"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std"] }
tokio-stream = "0.1"
futures-util = "0.3"
